{
    "name": "InputMap",
    "maps": [
        {
            "name": "Gameplay",
            "id": "3c79877d-4d35-48a7-90b5-659ab870f945",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "f37061cc-da84-4a5a-8db4-4e9f2155d853",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "03de8290-b318-4ecc-a748-78d6f0f4eaca",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchDelta",
                    "type": "Value",
                    "id": "17bd7ce7-09a2-41c4-a8fc-4907928a88f8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "124facfc-0bd8-481e-8159-7fbfd52a01cf",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc3d65b3-4b92-4420-a0c4-2b563a9d3afe",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c1c2f51-f4b6-4860-ab13-b54b98ca8702",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}